src/objects/RealAGT__c.object
<CustomObject>
    <description>Inventory room type of Travel Company</description>
    <fields>
        <fullName>AccountRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AGT</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>リアルAGT</relationshipLabel>
        <relationshipName>GenAccountRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgtMaxRooms__c</fullName>
        <label>AGT提供数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>終了日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RoomTypeRel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipName>GenRoomTypeRel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SearchKey__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>汎用マスタに各種別のデータはキーを作りたい場合、該当項目に格納する</inlineHelpText>
        <label>検索キー</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>開始日付</label>
        <type>Date</type>
    </fields>
    <label>リアルAGT</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>G-{00000000}</displayFormat>
        <label>番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>